--- a/exam_jo_site/my_authentification/templates/footer.html
+++ b/exam_jo_site/my_authentification/templates/footer.html
@@ -1,47 +1,30 @@
+<style>
+  @media (max-width: 600px) {
+    .cart-count-svg {
+        left: 25px;
+        top: -30px;
+    }
+}
+</style>
 {% load static %}
 <footer class="py-5 ps-1 bg-primary">
-    <div class="row  text-white">
-      <div class="col-12 col-md">
-        <a href=""{% url 'accueil2' %}""><img src="{% static "images/Paris 2024 - Logo HD.png" %}" alt="Logo" style="width: 250px; height: 125px;"></a>
-        <a class = " text-white " href="https://olympics.com/fr/paris-2024/" target="_blank"><small class="d-block ms-5 mb-3 fw-bold">Paris2024.org</small></a>
-      </div>
-      <div class="col-6 col-md">
-        <h5>Features</h5>
-        <ul class="list-unstyled text-small">
-          <li><a class="text-white text-decoration-none" href="#">Cool stuff</a></li>
-          <li><a class="text-white text-decoration-none" href="#">Random feature</a></li>
-          <li><a class="text-white text-decoration-none" href="#">Team feature</a></li>
-          <li><a class="text-white text-decoration-none" href="#">Stuff for developers</a></li>
-          <li><a class="text-white text-decoration-none" href="#">Another one</a></li>
-          <li><a class="text-white text-decoration-none" href="#">Last time</a></li>
-        </ul>
-      </div>
-      <div class="col-6 col-md">
-        <h5>Resources</h5>
-        <ul class="list-unstyled text-small">
-          <li><a class="text-white text-decoration-none" href="#">Resource name</a></li>
-          <li><a class="text-white text-decoration-none" href="#">Resource</a></li>
-          <li><a class="text-whitetext-decoration-none" href="#">Another resource</a></li>
-          <li><a class="text-white text-decoration-none" href="#">Final resource</a></li>
-        </ul>
-      </div>
-      <div class="col-6 col-md">
-        <h5>Resources</h5>
-        <ul class="list-unstyled text-small">
-          <li><a class="text-white text-decoration-none" href="#">Business</a></li>
-          <li><a class="text-white text-decoration-none" href="#">Education</a></li>
-          <li><a class="text-white text-decoration-none" href="#">Government</a></li>
-          <li><a class="text-white text-decoration-none" href="#">Gaming</a></li>
-        </ul>
-      </div>
-      <div class="col-6 col-md">
-        <h5>About</h5>
-        <ul class="list-unstyled text-small">
-          <li><a class="text-white text-decoration-none" href="#">Team</a></li>
-          <li><a class="text-white text-decoration-none" href="#">Locations</a></li>
-          <li><a class="text-white text-decoration-none" href="#">Privacy</a></li>
-          <li><a class="text-white text-decoration-none" href="#">Terms</a></li>
-        </ul>
-      </div>
+  <div class="row text-white">
+    <div class="col-12 col-md text-center text-md-start">
+        <a href="{% url 'accueil2' %}"><img src="{% static "images/Paris 2024 - Logo HD.png" %}" alt="Logo" style="width: 250px; height: 125px;"></a>
+        <a class="text-white" href="https://olympics.com/fr/paris-2024/" target="_blank"><small class="d-block ms-5 mb-3 fw-bold">Paris2024.org</small></a>
     </div>
-  </footer>
+    <div class="col-6 col-md text-md-end me-5">
+        <h5>Crédit</h5>
+        <ul class="list-unstyled text-small">
+            <li><a class="text-white" href="#">Conditions Générales de Vente</a></li>
+            <li><a class="text-white" href="#">Conditions Générales d'Utilisation</a></li>
+            <li><a class="text-white" href="#">Mentions Légales</a></li>
+            <li><a class="text-white" href="#">Politique de confidentialité</a></li>
+            <li><a class="text-white" href="#">Paramètres des Cookies</a></li>
+            <li><a class="text-white" href="#">Crédits Photos</a></li>
+            <li><a class="text-white" href="#">Accessibilité et éco-conception</a></li>
+            <li><a class="text-white" href="#">Centre d’aide</a></li>
+        </ul>
+    </div>
+  </div>
+</footer>
