--- a/exam_jo_site/my_authentification/templates/header.html
+++ b/exam_jo_site/my_authentification/templates/header.html
@@ -5,17 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
-    <title>Acuueil2</title>
+    <style> @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap'); body {font-family: 'Poppins', sans-serif; margin: 0;} button a{color: black;} button a:hover{color:white;}</style>
+    <title>Accueil</title>
 </head>
 {% load static %}
 <header class="p-3 text-bg-primary">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-
-        <!-- <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-          <input type="search" class="form-control form-control-dark text-bg-white" placeholder="Search..." aria-label="Search">
-        </form> -->
-
         <div class="text-end ms-auto">
           <button type="button" class="btn btn-outline-light me-2"><a href="{% url 'connexion' %}" class = "text-decoration-none text-white">Connexion</a></button>
           <button type="button" class="btn btn-warning"><a href="{% url 'inscription' %}" class = "text-decoration-none text-black">Inscription</a></button>
@@ -23,3 +19,4 @@
       </div>
     </div>
   </header>
+</html>
