--- a/exam_jo_site/my_authentification/templates/header3.html
+++ b/exam_jo_site/my_authentification/templates/header3.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <style>.shadow{text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);} .taille{width: 80%; height: 150px; border-radius: 21px 21px 0 0;}.taille2{height: 350px;}</style>
     <style> @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap'); body {font-family: 'Poppins', sans-serif; margin: 0;} button a{color: white;} button a:hover{color:black;}</style>
-    <style>.cart-count-svg {position: relative;left: -95px;} @media (max-width: 600px) {.cart-count-svg {left: 25px;top: -30px;}} .btn-outline-dark:hover {background-color: white;border-color: black;} @media (max-width: 992px) {.modal-backdrop.show {display: none !important;}}</style>
+    <style>.cart-count-svg {position: relative;left: -95px; top: -10px;} @media (max-width: 990px) {.cart-count-svg {left: 25px;top: -30px;}} @media (min-width: 991px) and (max-width: 1200px) {.cart-count-svg {left: -23px;top: -10px;}} @media (min-width: 1201px) and (max-width: 1399px) {.cart-count-svg {left: -60px;top: -10px;}} .btn-outline-dark:hover {background-color: white;border-color: black;} @media (max-width: 992px) {.modal-backdrop.show {display: none !important;}}</style>
     <title>Billetterie</title>
 </head>
 {% load static %}
