--- a/exam_jo_site/account/templates/connexion.html
+++ b/exam_jo_site/account/templates/connexion.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inscription</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
+    <title>Document</title>
 </head>
+{% load static %}
 <body>
+
     <div class="container">
-        <div class="container">
-            <div class="form">
-                <form method="post" action="{% url 'inscription' %}">
-                    {% csrf_token %}
-                    <h1>Inscription</h1>
-                    {{ form.as_p }}    
-                    <button type="submit">S'inscrire</button>
-                </form>
-                <p class="link">Déjà inscrit ? <a href="{% url 'connexion' %}">Se connecter</a></p>
+        <div class="form">
+            <h1>Connexion</h1>
+
+            {% if messages %}
+            <div class="error-messages">
+                {% for message in messages %}
+                <p class="error">{{ message }}</p>
+                {% endfor %}
             </div>
-        </div>      
+            {% endif %}
+
+            <form method="post" action="{% url 'connexion' %}">
+                {% csrf_token %}
+                <label for="username">Username</label>
+                <input type="text" name="username" required>
+                <label for="password">Mot de passe</label>
+                <input type="password" name="password" required>
+                <button type="submit">Se connecter</button>
+            </form>
+            <p class="link">Pas encore inscrit ? <a href="{% url 'inscription' %}">S'inscrire</a></p>
+        </div>
     </div>
+    
     <style>
         /* CSS */
         /* Import Google font - Poppins */
@@ -102,18 +117,15 @@
             text-align: center;
             margin-top: 20px;
         }
+
         .error {
             background-color: red;
             color: #fff;
             border-radius: 6px;
             padding: 10px;
             margin-bottom: 10px;
-            font-size: 14px;      
-            text-align: center; 
-        }
-        ul {
-            list-style: none;
-            color: red;
+            font-size: 14px;
+            text-align: center;
         }
     </style>
 </body>
