--- a/exam_jo_site/store/templates/accueil.html
+++ b/exam_jo_site/store/templates/accueil.html
@@ -1,12 +1,25 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Accueil</title>
+</head>
+
 {% load static %}
-        {% include 'header.html' %}
+{% if user.is_authenticated %}
+      {% include 'header2.html' %}
+{% endif %}
+{% if not user.is_authenticated %}
+       {% include 'header.html' %}
+{% endif %}
         <div class="d-flex h-100 text-center text-bg-dark">
         
           <div class="cover-container d-flex w-100 p-3 mx-auto flex-column" style= "background-image: url('{% static "images/athlete-feminine.jpg" %}'); background-size: cover; background-position: center; height: 800px; >
             <header class="mb-5">
               <nav class="navbar navbar-expand-lg" data-bs-theme="dark">
                 <div class="container">
-                  <a class="navbar-brand d-lg-none" href="{% url 'accueil2' %}">
+                  <a class="navbar-brand d-lg-none" href="{% url 'accueil' %}">
                     <img src="{% static "images/Paris2024_Olywhiteleft.png" %}" alt="Logo" style="width: 70px; height: 70px;">
                   </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" aria-controls="offcanvas" aria-label="Toggle navigation">
@@ -18,8 +31,8 @@
                     </div>
                     <div class="offcanvas-body">
                       <ul class="navbar-nav flex-grow-1 justify-content-between align-items-center">
-                        <li class="nav-item"><a class="nav-link" href="{% url 'accueil2' %}">
-                          <a href="{% url 'accueil2' %}"><img src="{% static "images/Paris2024_Olywhiteleft.png" %}" alt="Logo" style="width: 100px; height: 100px;"></a>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'accueil' %}">
+                          <a href="{% url 'accueil' %}"><img src="{% static "images/Paris2024_Olywhiteleft.png" %}" alt="Logo" style="width: 100px; height: 100px;"></a>
                         </a></li>
                         <li class="nav-item dropdown text-white">
                           <a class="nav-link dropdown-toggle text-light fw-bold" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">
