--- a/exam_jo_site/store/templates/boxe.html
+++ b/exam_jo_site/store/templates/boxe.html
@@ -4,7 +4,7 @@
 <style>.shadow-box{box-shadow: 0px 0px 5px black;}</style>
 
 <div class="px-4 py-5" id="custom-cards">
-    <h2 class="pb-2 border-bottom" style="margin-bottom: 60px;">Custom cards</h2>
+    <h2 class="pb-2 border-bottom" style="margin-bottom: 60px;">Boxe</h2>
 
 {% for produit in produits %}
 
@@ -25,7 +25,7 @@
                     <h4 class="text-end me-3 fw-bold text-light">{{produit.gratuit}}</h4>
                 </div>
                 <p class="lead text-end me-4">
-                  <a href="#" class="btn btn-lg fw-bold border-white bg-white add-to-cart " data-product-id="1">Ajouter au panier</a>
+                  <a href="{{ produit.get_absolute_url }}" class="btn btn-lg fw-bold border-white bg-white add-to-cart " data-product-id="1">Voir plus</a>
                 </p>
                 </div>
             </div>
@@ -39,5 +39,5 @@
 
 
 
-<script src="{% static 'js/cart.js' %}"></script>
+<!-- <script src="{% static 'js/cart.js' %}"></script> -->
 {% include 'footer.html' %}
