--- a/exam_jo_site/store/templates/football.html
+++ b/exam_jo_site/store/templates/football.html
@@ -4,67 +4,28 @@
 <style>.shadow-box{box-shadow: 0px 0px 5px black;}</style>
 
 <div class="px-4 py-5" id="custom-cards">
-    <h2 class="pb-2 border-bottom" style="margin-bottom: 60px;">Custom cards</h2>
+    <h2 class="pb-2 border-bottom" style="margin-bottom: 60px;">Football</h2>
+
+{% for produit in produits %}
 
     <div class="d-flex flex-column w-100 my-md-3 ps-md-3">
         <div class="row g-0">
             <div class="col-12 col-md-4">
-                <div class="pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden mb-md-4 rounded-start shadow-box" style="background-image: url('{% static "images/Firefly football jeux olympiques paris 2024 18773.jpg" %}'); background-size: cover; background-position: center;">
+                <div class="pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden mb-md-4 rounded-start shadow-box" style="background-image: url('{{ produit.image.url }}'); background-size: cover; background-position: center;">
                     <div class="taille2"></div>
                 </div>
             </div>
             <div class="col-12 col-md-8 rounded-end d-flex mb-md-4 bg-info shadow-box mb-sm-2">
                 <div class="d-flex flex-column flex-grow-1">
                 <div class="my-3 py-3">
-                    <h2 class="text-light fw-bold ms-3">Judo</h2>
-                    <p class="lead text-light ms-3">Start Time 09:00 CEST | End Time 18:00 CEST</p>
+                    <h2 class="text-light fw-bold ms-3">{{produit.name}}</h2>
+                    <p class="lead text-light ms-3">{{produit.description}}</p>
                     <p class="ms-3 fw-bold text-light">Prix du ticket individuel</p>
                     <p class="text-end m-3 text-light">A partir de:</p>
-                    <h4 class="text-end me-3 fw-bold text-light">€135.00</h4>
+                    <h4 class="text-end me-3 fw-bold text-light">{{produit.gratuit}}</h4>
                 </div>
                 <p class="lead text-end me-4">
-                  <a href="#" class="btn btn-lg fw-bold border-white bg-white add-to-cart " data-product-id="1">Ajouter au panier</a>
-                </p>
-                </div>
-            </div>
-
-            <div class="col-12 col-md-4">
-                <div class="pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden mb-md-4 rounded-start shadow-box" style="background-image: url('{% static "images/Firefly football jeux olympiques paris 2024 18773.jpg" %}'); background-size: cover; background-position: center;">
-                    <div class="taille2"></div>
-                </div>
-            </div>
-            <div class="col-12 col-md-8 rounded-end d-flex mb-md-4 bg-primary mb-sm-2 shadow-box">
-                <div class="d-flex flex-column flex-grow-1">
-                <div class="my-3 py-3">
-                    <h2 class="text-light fw-bold ms-3">Judo</h2>
-                    <p class="lead text-light ms-3">Start Time 09:00 CEST | End Time 18:00 CEST</p>
-                    <p class="ms-3 fw-bold text-light">Prix du ticket individuel</p>
-                    <p class="text-end m-3 text-light">A partir de:</p>
-                    <h4 class="text-end me-3 fw-bold text-light">€135.00</h4>
-                </div>
-                <p class="lead text-end me-4">
-                  <a href="#" class="btn btn-lg fw-bold border-white bg-white add-to-cart" data-product-id="1">Ajouter au panier</a>
-                </p>
-                </div>
-            </div>
-
-
-            <div class="col-12 col-md-4">
-                <div class="pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden rounded-start shadow-box" style="background-image: url('{% static "images/Firefly football jeux olympiques paris 2024 18773.jpg" %}'); background-size: cover; background-position: center;">
-                    <div class="taille2"></div>
-                </div>
-            </div>
-            <div class="col-12 col-md-8 rounded-end d-flex shadow-box" style ="background-color:#0d6ec8">
-                <div class="d-flex flex-column flex-grow-1">
-                <div class="my-3 py-3">
-                    <h2 class="text-light fw-bold ms-3">Judo</h2>
-                    <p class="lead text-light ms-3">Start Time 09:00 CEST | End Time 18:00 CEST</p>
-                    <p class="ms-3 fw-bold text-light">Prix du ticket individuel</p>
-                    <p class="text-end m-3 text-light">A partir de:</p>
-                    <h4 class="text-end me-3 fw-bold text-light">€135.00</h4>
-                </div>
-                <p class="lead text-end me-4">
-                  <a href="#" class="btn btn-lg fw-bold border-white bg-white add-to-cart" data-product-id="1">Ajouter au panier</a>
+                  <a href="{{ produit.get_absolute_url }}" class="btn btn-lg fw-bold border-white bg-white add-to-cart " data-product-id="1">Voir plus</a>
                 </p>
                 </div>
             </div>
@@ -72,6 +33,11 @@
 
     </div>
 
+{% endfor %}
+
 </div>
-<script src="{% static 'js/cart.js' %}"></script>
+
+
+
+<!-- <script src="{% static 'js/cart.js' %}"></script> -->
 {% include 'footer.html' %}
