--- a/exam_jo_site/templates/header2.html
+++ b/exam_jo_site/templates/header2.html
@@ -6,7 +6,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     <style> @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap'); body {font-family: 'Poppins', sans-serif; margin: 0;} button a{color: black;} button a:hover{color:white;}</style>
-    <title>Accueil2</title>
 </head>
 {% load static %}
 <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
@@ -48,9 +47,10 @@
         </form> -->
 
         <div class="text-end ms-auto">
-          <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center" id="bd-theme" type="button" aria-expanded="false" data-bs-toggle="dropdown" aria-label="Toggle theme (dark)">
-              <svg class="bi" width="24" height="24"><use href="#person"></use></svg>
-              <span class="visually-hidden" id="bd-theme-text">Toggle theme</span>
+          <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center text-light" id="bd-theme" type="button" aria-expanded="false" data-bs-toggle="dropdown" aria-label="Toggle theme (dark)">
+              <!-- <svg class="bi" width="24" height="24"><use href="#person"></use></svg>
+              <span class="visually-hidden" id="bd-theme-text">Toggle theme</span> -->
+              {{ user.username }}
           </button>
           <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="bd-theme-text">
               <li>
@@ -73,7 +73,7 @@
               </li>
               <li>
                   <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="auto" aria-pressed="false">
-                    <a href="{% url 'accueil' %}" class="text-decoration-none text-black">  
+                    <a href="{% url 'deconnexion' %}" class="text-decoration-none text-black">  
                       <svg class="bi me-2 opacity-50" width="1.5em" height="1.5em"><use href="#out"></use></svg>
                       Déconnexion
                       <svg class="bi ms-auto d-none" width="1em" height="1em"><use href="#check2"></use></svg>
