--- a/exam_jo_site/templates/header3.html
+++ b/exam_jo_site/templates/header3.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <style>.shadow{text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);} .taille{width: 80%; height: 150px; border-radius: 21px 21px 0 0;}.taille2{height: 350px;}</style>
     <style> @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap'); body {font-family: 'Poppins', sans-serif; margin: 0;} button a{color: white;} button a:hover{color:black;}</style>
-    <style>.cart-count-svg {position: relative;left: -95px; top: -10px;} @media (max-width: 990px) {.cart-count-svg {left: 25px;top: -30px;}} @media (min-width: 991px) and (max-width: 1200px) {.cart-count-svg {left: -23px;top: -10px;}} @media (min-width: 1201px) and (max-width: 1399px) {.cart-count-svg {left: -60px;top: -10px;}} .btn-outline-dark:hover {background-color: white;border-color: black;} @media (max-width: 992px) {.modal-backdrop.show {display: none !important;}}</style>
+    <style>.cart-count-svg {position: relative;left: -95px; top: -10px;} @media (max-width: 990px) {.cart-count-svg {left: 25px;top: -30px;}} @media (min-width: 991px) and (max-width: 1200px) {.cart-count-svg {left: -23px;top: -10px;}} @media (min-width: 1201px) and (max-width: 1399px) {.cart-count-svg {left: -60px;top: -10px;}} .btn-outline-dark:hover {background-color: white;border-color: black;} @media (max-width: 992px) {.modal-backdrop.show {display: none !important;}}.dropdown-item:hover {background-color: rgb(238, 238, 238);}</style>
     <title>Billetterie</title>
 </head>
 {% load static %}
@@ -27,7 +27,7 @@
 <header>
   <nav class="navbar navbar-expand-lg bg-primary border-bottom" data-bs-theme="dark">
     <div class="container">
-      <a class="navbar-brand d-lg-none" href="{% url 'accueil2' %}">
+      <a class="navbar-brand d-lg-none" href="{% url 'accueil' %}">
         <img src="{% static "images/Paris2024_Olywhiteleft.png" %}" alt="Logo" style="width: 70px; height: 70px;">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" aria-controls="offcanvas" aria-label="Toggle navigation">
@@ -40,7 +40,7 @@
         <div class="offcanvas-body">
           <ul class="navbar-nav flex-grow-1 justify-content-between align-items-center">
             <li class="nav-item"><a class="nav-link" href="{% url 'accueil2' %}">
-              <a href="{% url 'accueil2' %}"><img src="{% static "images/Paris2024_Olywhiteleft.png" %}" alt="Logo" style="width: 100px; height: 100px;"></a>
+              <a href="{% url 'accueil' %}"><img src="{% static "images/Paris2024_Olywhiteleft.png" %}" alt="Logo" style="width: 100px; height: 100px;"></a>
             </a></li>
             <li class="nav-item dropdown text-white">
               <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -83,11 +83,20 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <!-- List of products in the cart -->
+                  {% for commande in commandes %}
+                  <h2>Commande : {{ commande.produit.name }}</h2>
+                  <div>
+                      <h3>{{ commande.produit.description }}</h3>
+                      <p>{{ commande.produit.image }}</p>
+                      <p>{{ commande.quantite }}</p>
+                  </div>
+                  {% empty %}
+                      <p>Aucun produit pour cette commande.</p>
+              {% endfor %}
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-outline-dark text-black" data-bs-dismiss="modal">Fermer</button>
-                    <a href="{% url 'checkout' %}" class="btn btn-primary">Checkout</a>
+                    <a href="{% url 'panier' %}" class="btn btn-primary">Panier</a>
                 </div>
                 </div>
             </div>
