--- a/exam_jo_site/store/templates/accueil.html
+++ b/exam_jo_site/store/templates/accueil.html
@@ -17,6 +17,7 @@
         
           <div class="cover-container d-flex w-100 p-3 mx-auto flex-column" style= "background-image: url('{% static "images/athlete-feminine.jpg" %}'); background-size: cover; background-position: center; height: 800px; >
             <header class="mb-5">
+              {% if user.is_authenticated %}
               <nav class="navbar navbar-expand-lg" data-bs-theme="dark">
                 <div class="container">
                   <a class="navbar-brand d-lg-none" href="{% url 'accueil' %}">
@@ -65,6 +66,7 @@
                   </div>
                 </div>
               </nav>
+              {% endif %}
             </header>
           
             <main class="px-3 text-start" style="margin-top:150px;">
