--- a/exam_jo_site/store/templates/billetterie.html
+++ b/exam_jo_site/store/templates/billetterie.html
@@ -1,12 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <title>Billetterie</title>
+</head>
 <body>
-
+  
+</body>
+</html>
+<body>
+  <style>.shadow-box{box-shadow: 0px 0px 5px black;}</style>
     
   {% load static %}
-  {% include 'header3.html' %}    
+  {% if user.is_authenticated %}
+    {% include 'header3.html' %} 
+{% endif %}
+{% if not user.is_authenticated %}
+       {% include 'header.html' %}
+{% endif %}   
 
     <main>
-      <div class="position-relative overflow-hidden p-3 p-md-5  text-bg-info">
+      <div class="position-relative overflow-hidden p-3 p-md-5 text-bg-info">
         <div>
           <h2 class="fw-bold">BILLETTERIE DES JEUX OLYMPIQUES</h2><br>
           <h3 class="fw-normal mb-3 text-white">Différents sports sont à nouveau disponibles à la vente ! La billetterie de Paris 2024 connaissant un grand succès, certaines sessions sont d’ores et déjà écoulées.<br>
@@ -19,9 +32,8 @@
         <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
       </div>
     <div>
-
-      <div class="d-flex flex-column w-100 my-md-3 ps-md-3">
-        <div class="me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden mt-1" style="background-image: url('{% static "images/Firefly judo jeux olympiques paris 2024 22985.jpg" %}'); background-size: cover; background-position: center;">
+      <div class="d-flex flex-column w-100 my-md-3 ps-md-3 container">
+        <div class="me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden mt-1 rounded shadow-box mt-4" style="background-image: url('{% static "images/Firefly judo jeux olympiques paris 2024 22985.jpg" %}'); background-size: cover; background-position: center; height : 300px">
             <div class="my-3 py-3">
                 <h2 class="display-5 text-white shadow fw-bold">Judo</h2>
                 <p class="lead text-white shadow">mer. 24.07.2024 |  15:00 - 17:00  |  Paris  |   Parc des Princes</p>
@@ -31,7 +43,7 @@
             </p>
             <div class="taille"></div>
         </div>
-        <div class="me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden mt-1" style="background-image: url('{% static "images/Firefly boxe jeux olympiques paris 2024 30505.jpg" %}'); background-size: cover; background-position: center;">
+        <div class="me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden mt-1 rounded shadow-box mt-4" style="background-image: url('{% static "images/Firefly boxe jeux olympiques paris 2024 30505.jpg" %}'); background-size: cover; background-position: center; height : 300px">
             <div class="my-3 p-3">
                 <h2 class="display-5 text-white fw-bold shadow">Boxe</h2>
                 <p class="lead text-white shadow">mer. 24.07.2024 |  15:00 - 17:00  |  Paris  |   Parc des Princes</p>
@@ -46,7 +58,7 @@
 
 
 
-        <div class="me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden mt-1" style="background-image: url('{% static "images/Firefly rugby jeux olympiques paris 2024 22985.jpg" %}'); background-size: cover; background-position: center;">
+        <div class="me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden mt-1 rounded shadow-box mt-4" style="background-image: url('{% static "images/Firefly rugby jeux olympiques paris 2024 22985.jpg" %}'); background-size: cover; background-position: center; height : 300px">
             <div class="my-3 p-3">
                 <h2 class="display-5 text-white shadow fw-bold">Rugby</h2>
                 <p class="lead text-white shadow">mer. 24.07.2024 |  15:00 - 17:00  |  Paris  |   Parc des Princes</p>
@@ -56,7 +68,7 @@
             </p>
             <div class="taille"></div>
             </div>
-            <div class="me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden mt-1" style="background-image: url('{% static "images/Firefly football jeux olympiques paris 2024 18773.jpg" %}'); background-size: cover; background-position: center;">
+            <div class="me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden mt-1 rounded shadow-box mt-4" style="background-image: url('{% static "images/Firefly football jeux olympiques paris 2024 18773.jpg" %}'); background-size: cover; background-position: center; height : 300px">
             <div class="my-3 py-3">
                 <h2 class="display-5 text-white fw-bold shadow">Football</h2>
                 <p class="lead text-white shadow">mer. 24.07.2024 |  15:00 - 17:00  |  Paris  |   Parc des Princes</p>
@@ -71,7 +83,7 @@
 
 
 
-            <div class="me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden mt-1" style="background-image: url('{% static "images/Firefly athéltisme jeux olympiques paris 2024 21356.jpg" %}'); background-size: cover; background-position: center;">
+            <div class="me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden mt-1 rounded shadow-box mt-4" style="background-image: url('{% static "images/Firefly athéltisme jeux olympiques paris 2024 21356.jpg" %}'); background-size: cover; background-position: center; height : 300px">
             <div class="my-3 p-3">
                 <h2 class="display-5 shadow text-light fw-bold">Athlétisme</h2>
                 <p class="lead shadow text-light">mer. 24.07.2024 |  15:00 - 17:00  |  Paris  |   Parc des Princes</p>
@@ -81,7 +93,7 @@
             </p>
             <div class="taille"></div>
             </div>
-            <div class="me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden mt-1" style="background-image: url('{% static "images/Firefly natation jeux olympiques paris 2024 39368.jpg" %}'); background-size: cover; background-position: center;">
+            <div class="me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden mt-1 rounded shadow-box mt-4" style="background-image: url('{% static "images/Firefly natation jeux olympiques paris 2024 39368.jpg" %}'); background-size: cover; background-position: center; height : 300px">
             <div class="my-3 py-3">
                 <h2 class="display-5 text-light fw-bold shadow">Natation</h2>
                 <p class="lead text-light shadow">mer. 24.07.2024 |  15:00 - 17:00  |  Paris  |   Parc des Princes</p>
@@ -96,7 +108,7 @@
 
 
 
-            <div class="me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden mt-1" style="background-image: url('{% static "images/Firefly badminton jeux olympiques paris 2024 22985.jpg" %}'); background-size: cover; background-position: center;">
+            <div class="me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden mt-1 rounded shadow-box mt-4" style="background-image: url('{% static "images/Firefly badminton jeux olympiques paris 2024 22985.jpg" %}'); background-size: cover; background-position: center; height : 300px">
             <div class="my-3 p-3">
                 <h2 class="display-5 text-white fw-bold shadow">Badminton</h2>
                 <p class="lead text-white shadow">mer. 24.07.2024 |  15:00 - 17:00  |  Paris  |   Parc des Princes</p>
@@ -106,7 +118,7 @@
             </p>
             <div class="taille"></div>
             </div>
-            <div class="me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden mt-1" style="background-image: url('{% static "images/Firefly handball jeux olympiques paris 2024 18773.jpg" %}'); background-size: cover; background-position: center;">
+            <div class="me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden mt-1 rounded shadow-box mt-4 mb-4" style="background-image: url('{% static "images/Firefly handball jeux olympiques paris 2024 18773.jpg" %}'); background-size: cover; background-position: center; height : 300px">
             <div class="my-3 py-3">
                 <h2 class="display-5 text-white fw-bold shadow">Handball</h2>
                 <p class="lead text-white shadow">mer. 24.07.2024 |  15:00 - 17:00  |  Paris  |   Parc des Princes</p>
