--- a/exam_jo_site/templates/header.html
+++ b/exam_jo_site/templates/header.html
@@ -5,17 +5,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
-    <style> @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap'); body {font-family: 'Poppins', sans-serif; margin: 0;} button a{color: black;} button a:hover{color:white;}</style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <style>.shadow{text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);} .taille{width: 80%; height: 150px; border-radius: 21px 21px 0 0;}.taille2{height: 350px;}</style>
+    <style> @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap'); body {font-family: 'Poppins', sans-serif; margin: 0;} button a{color: white;} button a:hover{color:black;}</style>
+    <style>.cart-count-svg {position: relative;left: -95px; top: -10px;} @media (max-width: 990px) {.cart-count-svg {left: 25px;top: -30px;}} @media (min-width: 991px) and (max-width: 1200px) {.cart-count-svg {left: -23px;top: -10px;}} @media (min-width: 1201px) and (max-width: 1399px) {.cart-count-svg {left: -60px;top: -10px;}} .btn-outline-dark:hover {background-color: white;border-color: black;} @media (max-width: 992px) {.modal-backdrop.show {display: none !important;}}.dropdown-item:hover {background-color: rgb(238, 238, 238);}</style>
+    <title>Billetterie</title>
 </head>
 {% load static %}
-<header class="p-3 text-bg-primary">
-    <div class="container">
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <div class="text-end ms-auto">
-          <button type="button" class="btn btn-outline-light me-2"><a href="{% url 'connexion' %}" class = "text-decoration-none text-white">Connexion</a></button>
-          <button type="button" class="btn btn-warning"><a href="{% url 'inscription' %}" class = "text-decoration-none text-black">Inscription</a></button>
+<svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+    <symbol id="aperture" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24">
+      <circle cx="12" cy="12" r="10"></circle>
+      <path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"></path>
+    </symbol>
+    <symbol id="cart" viewBox="0 0 16 16" fill="white">
+      <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"></path>
+    </symbol>
+    <symbol id="chevron-right" viewBox="0 0 16 16">
+      <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"></path>
+    </symbol>
+  </svg>
+<header>
+  <nav class="navbar navbar-expand-lg bg-primary border-bottom" data-bs-theme="dark">
+    <div class="container ms-4">
+      <a class="navbar-brand d-lg-none" href="{% url 'accueil' %}">
+        <img src="{% static "images/Paris2024_Olywhiteleft.png" %}" alt="Logo" style="width: 70px; height: 70px;">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" aria-controls="offcanvas" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas" aria-labelledby="offcanvasLabel">
+        <div class="offcanvas-header">
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav flex-grow-1 justify-content-between align-items-center">
+            <li class="nav-item"><a class="nav-link" href="{% url 'accueil2' %}">
+              <a href="{% url 'accueil' %}"><img src="{% static "images/Paris2024_Olywhiteleft.png" %}" alt="Logo" style="width: 100px; height: 100px;"></a>
+            </a></li>
+            <li class="nav-item dropdown text-white">
+              <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Tous les événements
+              </a>
+              <div class="dropdown-menu text-bg-light" aria-labelledby="navbarDropdown">
+                  <div class="d-flex flex-row">
+                      <div class="p-4">
+                          <a class="dropdown-item text-black" href="{% url 'judo' %}">Judo</a>
+                          <a class="dropdown-item text-black" href="{% url 'boxe' %}">Boxe</a>
+                          <a class="dropdown-item text-black" href="#">Rugby</a>
+                          <a class="dropdown-item text-black" href="#">Handball</a>
+                      </div>
+                      <div class="p-4">
+                          <a class="dropdown-item text-black" href="{% url 'football' %}">Football</a>
+                          <a class="dropdown-item text-black" href="#">Athlétisme</a>
+                          <a class="dropdown-item text-black" href="#">Natation</a>
+                          <a class="dropdown-item text-black" href="#">Badminton</a>
+                  </div>
+              </div>
+            </div>
+          </li>
+            <li class="nav-item"><a class="nav-link text-white" href="#">Toutes les villes</a></li>
+            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search" action="{% url 'search_view' %}">
+              <input id="search" type="text" name="recherche" class="form-control form-control-dark" placeholder="Rechercher..." aria-label="Rechercher">
+              <div id="suggestions" class="suggestions-container"></div>
+            </form>
+          </ul>
+          <div class="text-end ms-auto" style ="margin-top:40px;">
+            <button type="button" class="btn btn-outline-light me-2"><a href="{% url 'connexion' %}" class = "text-decoration-none text-white">Connexion</a></button>
+            <button type="button" class="btn btn-warning"><a href="{% url 'inscription' %}" class = "text-decoration-none text-black">Inscription</a></button>
+          </div>
         </div>
       </div>
     </div>
-  </header>
+</header> 
 </html>
