--- a/exam_jo_site/templates/header2.html
+++ b/exam_jo_site/templates/header2.html
@@ -64,7 +64,7 @@
               </li>
               <li>
                   <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark" aria-pressed="true">
-                    <a href="{% url 'accueil' %}" class="text-decoration-none text-black">  
+                    <a href="{% url 'mes_commandes' %}" class="text-decoration-none text-black">  
                       <svg class="bi me-2 opacity-50" width="1.5em" height="1.5em"><use href="#orders"></use></svg>
                       Mes commandes
                       <svg class="bi ms-auto d-none" width="1em" height="1em"><use href="#check2"></use></svg>
