--- a/exam_jo_site/store/templates/panier.html
+++ b/exam_jo_site/store/templates/panier.html
@@ -56,16 +56,56 @@
     {% else %}
         <h4 class="text-start me-3 fw-bold text-dark mt-3">Total : {{ cart.total }} €</h4>
     {% endif %}
-{% endif %}
+
 <p class="lead text-end me-4">
         {% if cart.commandes.count > 0 %}
-            <a href="{% url 'checkout' %}" class="btn btn-lg fw-bold border-dark bg-dark text-white add-to-cart shadow-box" data-product-id="1">Checkout</a>
+        <form action="{% url 'panier' %}" method="post" id="payment-form">
+            {% csrf_token %}
+            <a id="customButton" class="btn btn-lg fw-bold border-dark bg-dark text-white add-to-cart shadow-box" data-product-id="1" disabled>Payer maintenant</a>
+            <script src="https://checkout.stripe.com/checkout.js"></script>
+            <script>
+              var handler = StripeCheckout.configure({
+                key: "{{ STRIPE_PUBLIC_KEY }}",
+                locale: 'auto',
+                token: function(token) {
+                  // Vous pouvez accéder au token ID avec `token.id`.
+                  // Obtenez le token ID dans une variable cachée dans le formulaire et soumettez le formulaire :
+                  var form = document.getElementById('payment-form');
+                  var hiddenInput = document.createElement('input');
+                  hiddenInput.setAttribute('type', 'hidden');
+                  hiddenInput.setAttribute('name', 'stripeToken');
+                  hiddenInput.setAttribute('value', token.id);
+                  form.appendChild(hiddenInput);
+              
+                  // Soumettre le formulaire :
+                  form.submit();
+                }
+              });
+              
+              document.getElementById('customButton').addEventListener('click', function(e) {
+                // Ouvrir Checkout avec les détails de la commande :
+                handler.open({
+                  name: 'Votre Panier',
+                  description: 'Paiement : {{ cart.total }} €',
+                  currency: 'eur',
+                  amount: "{{ total_in_cents }}"
+                });
+                e.preventDefault();
+              });
+              
+              // Fermer Checkout lors du clic en dehors de la fenêtre de dialogue :
+              window.addEventListener('popstate', function() {
+                handler.close();
+              });
+              </script>
+        </form>
         {% else %}
             <a href="{% url 'billetterie' %}" class="btn btn-lg fw-bold border-dark bg-dark text-white add-to-cart shadow-box" data-product-id="1" disabled>Billetterie</a>
         {% endif %}
 </p>
-
+{% endif %}
 </div>
+
 
 
 
