--- a/exam_jo_site/templates/footer.html
+++ b/exam_jo_site/templates/footer.html
@@ -9,21 +9,17 @@
 {% load static %}
 <footer class="py-5 ps-1 bg-primary">
   <div class="row text-white">
-    <div class="col-12 col-md text-center text-md-start">
-        <a href="{% url 'accueil2' %}"><img src="{% static "images/Paris 2024 - Logo HD.png" %}" alt="Logo" style="width: 250px; height: 125px;"></a>
+    <div class="col-12 col-md text-center text-md-start" style="margin-left: 20px;">
+        <a href="{% url 'accueil' %}"><img src="{% static "images/Paris 2024 - Logo HD.png" %}" alt="Logo" style="width: 250px; height: 125px;"></a>
         <a class="text-white" href="https://olympics.com/fr/paris-2024/" target="_blank"><small class="d-block ms-5 mb-3 fw-bold">Paris2024.org</small></a>
     </div>
     <div class="col-6 col-md text-md-end me-5">
         <h5>Crédit</h5>
         <ul class="list-unstyled text-small">
-            <li><a class="text-white" href="#">Conditions Générales de Vente</a></li>
-            <li><a class="text-white" href="#">Conditions Générales d'Utilisation</a></li>
-            <li><a class="text-white" href="#">Mentions Légales</a></li>
-            <li><a class="text-white" href="#">Politique de confidentialité</a></li>
-            <li><a class="text-white" href="#">Paramètres des Cookies</a></li>
-            <li><a class="text-white" href="#">Crédits Photos</a></li>
-            <li><a class="text-white" href="#">Accessibilité et éco-conception</a></li>
-            <li><a class="text-white" href="#">Centre d’aide</a></li>
+            <li><a class="text-white" href="{% url 'CGV' %}">Conditions Générales de Vente</a></li>
+            <li><a class="text-white" href="{% url 'CGU' %}">Conditions Générales d'Utilisation</a></li>
+            <li><a class="text-white" href="{% url 'ML' %}">Mentions Légales</a></li>
+            <li><a class="text-white" href="{% url 'PDC' %}">Politique de Confidentialité</a></li>
         </ul>
     </div>
   </div>
