--- a/exam_jo_site/templates/header.html
+++ b/exam_jo_site/templates/header.html
@@ -69,7 +69,7 @@
               <div id="suggestions" class="suggestions-container"></div>
             </form>
           </ul>
-          <div class="text-end ms-auto" style ="margin-top:40px;">
+          <div style ="margin-top:40px;">
             <button type="button" class="btn btn-outline-light me-2"><a href="{% url 'connexion' %}" class = "text-decoration-none text-white">Connexion</a></button>
             <button type="button" class="btn btn-warning"><a href="{% url 'inscription' %}" class = "text-decoration-none text-black">Inscription</a></button>
           </div>
